app/assets/stylesheets/application.css.scss
//= require codemirror

@import "readable";
@import "font-awesome";

@mixin page-header {
  @extend .page-header;

  h1 em {
    @extend .text-muted;
    font-style: normal;
  }

  h1 small {
    text-transform: none;
    white-space: nowrap;
  }

  p {
    @extend .lead;
  }

  img {
    vertical-align: bottom;
  }
}

@mixin transition($property, $duration: 1s) {
  transition: $property $duration;
  -moz-transition: $property $duration;
  -o-transition: $property $duration;
  -webkit-transition: $property $duration;
}

@mixin calc($property, $value) {
  #{$property}: calc(#{$value});
  #{$property}: -moz-calc(#{$value});
  #{$property}: -webkit-calc(#{$value});
}

@mixin icon($name) {
  @extend .fa, .fa-#{$name};
}

@mixin empty-placeholder($content) {
  &:empty:before {
    @extend .text-muted;

    content: $content;
  }
}

$desktop-width: 750px + 252px;
$widescreen-width: 1170px + (252px * 2);

@mixin mobile {
  @media all and (max-width: $desktop-width - 1) {
    @content;
  }
}

@mixin desktop {
  @media all and (min-width: $desktop-width) {
    @content;
  }
}

@mixin widescreen {
  @media all and (min-width: $widescreen-width) {
    @content;
  }
}

html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
}

body[data-state="loading"] {
  &:after {
    content: "";

    display: block;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;

    background: #fff image-url("loading.gif") no-repeat center;
    opacity: 0.5;
    z-index: 100;
  }
}

body > nav {
  @include transition(right, 0.5s);

  position: fixed;
  top: 0;
  bottom: 0;
  width: 200px;
  padding: 20px;

  border-right: 12px solid black;
  background-color: #fff;

  // Keep above <main>, below <footer>
  z-index: 1;

  ul {
    @extend .nav, .nav-stacked;

    // Keep above <footer>
    z-index: 3;

    li {
      @extend h4;
    }
  }

  @include mobile {
    right: -220px;

    border-left: 12px solid black;
    border-right: none;

    &.revealed {
      right: 0;
    }
  }
}

button.expand-nav {
  @include icon(list);

  position: absolute;
  top: 10px;
  right: 10px;

  font-size: 200%;
  background-color: #fff;
  border: #fff;
  color: #000;

  @include desktop {
    visibility: hidden;
  }
}

main {
  @extend .container;

  min-height: calc(100% - 40px);

  @include desktop {
    margin-left: 240px;

    @include calc(max-width, "100% - 252px");
  }

  @include widescreen {
    width: auto;
    margin-right: 252px;
  }

  & > header {
    @include page-header;
  }
}

body > footer {
  @extend .small, .text-muted;

  // Keep aligned w/ <main>
  padding-left: 15px;

  p {
    margin-bottom: 1ex;
  }

  p:last-child {
    margin-bottom: 0;
  }

  @include desktop {
    position: fixed;
    display: block;
    bottom: 20px;
    left: 20px;
    width: 200px;

    // No padding since we're using fixed positioning
    padding: 0;

    // Keep above <nav> but below <ul>
    z-index: 2;
  }
}

nav {
  a[href="#login"] {
    color: #5cb85c;
  }

  a[href="/logout"] {
    color: #d9534f;
  }
}

table {
  @extend .table;

  th, td {
    vertical-align: middle !important;
  }

  th:last-child, td:last-child {
    text-align: right;
  }
}

form .field {
  @extend .form-group;
}

input[type="text"], input[type="password"], textarea {
  @extend .form-control;
}

input[type="submit"] {
  @extend .btn, .btn-sm, .btn-primary;
}

button {
  @extend .btn, .btn-sm, .btn-default;

  &.delete {
    @extend .btn-danger;
  }
}

ul.message-list {
  @extend .list-group;

  list-style: none;

  li > a {
    @extend .list-group-item, .media;

    .picture {
      @extend .pull-left;

      img { @extend .media-object; }
    }

    .info {
      @extend .media-body;

      h3.subject {
        @extend .list-group-item-heading;
        @include empty-placeholder("[No subject]");
      }

      .sender_email, .recipient_email {
        @extend .pull-right;

        &:before {
          @extend .text-muted;
          font-size: 80%;
        }
      }

      .sender_email:before {
        content: "From: ";
      }

      .recipient_email:before {
        content: "To: ";
      }

      .created {
        @extend .list-group-item-text;
      }
    }
  }
}

#message > h2 {
  .subject {
    @include empty-placeholder("[No subject]");
  }
}

#notice {
  @extend .alert, h5;

  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  text-align: center;

  // Undo Bootstrap's margin and padding from .alert
  margin-bottom: 0;
  padding: 0;

  // Explicitly set the height for animation purposes
  height: 50px;
  line-height: 50px;

  &:empty {
    display: none;
  }

  &.info { @extend .alert-info; }
  &.success { @extend .alert-success; }
  &.warning { @extend .alert-warning; }
  &.error { @extend .alert-danger; }

  &[data-state="hiding"] {
    bottom: -50px;
  }

  @include transition(bottom, 1s);
}

.CodeMirror {
  @extend textarea;

  height: auto;
}

.CodeMirror, .CodeMirror-scroll {
  min-height: 200px;
}

.CodeMirror-scroll {
  margin: 0;
  overflow-y: hidden;
  overflow-x: auto;
}

.CodeMirror-focused {
  @extend .form-control:focus;
}

body[data-page="blog"] {
  ul.post-list {
    @extend .list-group;

    list-style: none;

    li > a {
      @extend .list-group-item;

      h3.title {
        @extend .list-group-item-heading;
      }

      small {
        @extend .list-group-item-text, .text-muted;
      }
    }
  }

  article {
    font-size: 150%;
    margin: auto;
    padding: 10px;

    & > header {
      @include page-header;
    }
  }

  @media all and (min-width: 960px) {
    article {
      min-width: 940px;
      width: 60%;
    }
  }
}

